--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grand Mystery Prizes - i88</title>
-
-    <!-- Fonts only (OK) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&family=Playfair+Display:wght@400;700;900&family=Great+Vibes&family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <title>Landing Page</title>
   </head>
-
-  <body class="bg-slate-950">
+  <body>
     <div id="root"></div>
-
-    <!-- ✅ THIS IS THE MOST IMPORTANT LINE -->
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
