--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand Mystery Prizes - i88</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="<a href="https://imgbb.com/"><img src="https://i.ibb.co/gZrPNHtw/prizes-2.png" alt="prizes (2)" border="0"></a>">
     <style>
         body {
             margin: 0;
