--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand Mystery Prizes - i88</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="<a href="https://imgbb.com/"><img src="https://i.ibb.co/gZrPNHtw/prizes-2.png" alt="prizes (2)" border="0"></a>">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -57,7 +57,7 @@
         </div>
         
         <div class="glass-card p-12 w-full max-w-lg flex flex-col items-center justify-center border-2 border-sky-500/30">
-            <div class="text-6xl mb-4">🎁</div>
+            <div class="<a href="https://imgbb.com/"><img src="https://i.ibb.co/gZrPNHtw/prizes-2.png" alt="prizes (2)" border="0"></a></div>
             <p class="font-spark text-2xl font-bold tracking-tighter">SURPRISE REWARD</p>
             <p class="text-slate-400 text-xs mt-2 uppercase">Revealing Soon</p>
         </div>
