--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand Mystery Prizes - i88</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link "<a href="https://ibb.co/QFp6sJyC"><img src="https://i.ibb.co/GvnVgdzt/I88-logo.png" alt="I88-logo" border="0"></a>">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
             background-color: #020617;
-            /* Using your uploaded background image for the full page */
-            background-image: linear-gradient(rgba(2, 6, 23, 0.7), rgba(2, 6, 23, 0.7)), url('https://i.ibb.co/pvT9fnbq/background.jpg');
+            background-image: linear-gradient(rgba(2, 6, 23, 0.8), rgba(2, 6, 23, 0.8)), url('https://i.ibb.co/pvT9fnbq/background.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -24,64 +23,18 @@
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 2rem;
+            border-radius: 1.5rem;
         }
         .text-glow {
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.8), 0 0 40px rgba(0, 212, 255, 0.5);
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6), 0 0 30px rgba(0, 212, 255, 0.4);
         }
     </style>
 </head>
-<body class="min-h-screen flex flex-col items-center py-12 px-4">
+<body class="min-h-screen flex flex-col items-center py-6 px-4">
 
-    <div class="mb-8">
-        <img src="https://i.ibb.co/jZR3H8pY/I88-DP.png" alt="Brand Logo" class="h-20 w-auto">
+    <div class="mb-6">
+        <img src="https://i.ibb.co/GvnVgdzt/I88-logo.png" alt="I88 Logo" class="h-10 w-auto">
     </div>
 
-    <div class="text-center max-w-4xl mb-12">
-        <h1 class="font-spark text-4xl md:text-6xl lg:text-7xl font-black uppercase tracking-widest leading-tight text-glow">
-            Celebrate the Joyful<br>International Holiday<br>With Us!
-        </h1>
-    </div>
-
-    <div class="glass-card px-12 py-6 mb-12 text-center">
-        <p class="text-xs tracking-[0.3em] uppercase text-slate-400 mb-2">Event Timeline</p>
-        <p class="font-spark text-xl md:text-2xl tracking-widest font-bold">
-            18 DEC 2025 – 1 JAN 2026
-        </p>
-    </div>
-
-    <div class="w-full max-w-4xl mb-16 relative flex flex-col items-center">
-        <div class="text-center mb-6">
-            <h2 class="font-spark text-3xl font-bold text-sky-400 tracking-wider">THE MYSTERY PODIUM</h2>
-            <p class="text-slate-300 text-sm">Uncover your holiday rewards</p>
-        </div>
-        
-        <div class="glass-card p-12 w-full max-w-lg flex flex-col items-center justify-center border-2 border-sky-500/30">
-            <div class="<a href="https://imgbb.com/"><img src="https://i.ibb.co/gZrPNHtw/prizes-2.png" alt="prizes (2)" border="0"></a></div>
-            <p class="font-spark text-2xl font-bold tracking-tighter">SURPRISE REWARD</p>
-            <p class="text-slate-400 text-xs mt-2 uppercase">Revealing Soon</p>
-        </div>
-    </div>
-
-    <div class="glass-card p-8 max-w-sm w-full text-center mb-12">
-        <p class="text-sky-400 text-xs font-bold uppercase mb-4">Step 1</p>
-        <h3 class="text-lg font-bold mb-2 uppercase">How to Claim?</h3>
-        <p class="text-slate-400 text-sm leading-relaxed">
-            Register an account on our official portal. <br>
-            Log in & claim your mysterious entry ticket.
-        </p>
-        <p class="font-serif italic text-red-400 mt-4 text-lg">That simple!</p>
-    </div>
-
-    <div class="mt-8 pb-20">
-        <a href="https://www.palacehub8.com/1NQ9tPWE" class="bg-red-600 hover:bg-red-700 text-white font-black text-2xl px-16 py-5 rounded-full shadow-[0_0_40px_rgba(220,38,38,0.6)] transition-all transform hover:scale-105 uppercase tracking-widest block text-center">
-            Join Now
-        </a>
-    </div>
-
-    <div class="fixed bottom-0 left-0 w-full z-[-1] pointer-events-none">
-         <img src="https://i.ibb.co/pvT9fnbq/background.jpg" class="w-full object-cover h-32 opacity-40 blur-sm" alt="footer graphic">
-    </div>
-
-</body>
-</html>
+    <div class="text-center max-w-3xl mb-8">
+        <h1 class="font-spark text-3xl md:text-5xl lg:text-6xl font-black uppercase tracking-widest leading-tight
