--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #020617;
-            background-image: linear-gradient(rgba(2, 6, 23, 0.8), rgba(2, 6, 23, 0.8)), url('https://i.ibb.co/pvT9fnbq/background.jpg');
+            background-image: linear-gradient(rgba(2, 6, 23, 0.75), rgba(2, 6, 23, 0.75)), url('https://i.ibb.co/pvT9fnbq/background.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -23,18 +23,60 @@
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 1.5rem;
+            border-radius: 2rem;
         }
         .text-glow {
-            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6), 0 0 30px rgba(0, 212, 255, 0.4);
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.8), 0 0 40px rgba(0, 212, 255, 0.5);
         }
     </style>
 </head>
-<body class="min-h-screen flex flex-col items-center py-6 px-4">
+<body class="min-h-screen flex flex-col items-center py-8 px-4">
 
     <div class="mb-6">
-        <img src="https://i.ibb.co/GvnVgdzt/I88-logo.png" alt="I88 Logo" class="h-10 w-auto">
+        <img src="https://i.ibb.co/GvnVgdzt/I88-logo.png" alt="I88 Logo" class="h-12 w-auto">
     </div>
 
-    <div class="text-center max-w-3xl mb-8">
-        <h1 class="font-spark text-3xl md:text-5xl lg:text-6xl font-black uppercase tracking-widest leading-tight
+    <div class="text-center max-w-4xl mb-12">
+        <h1 class="font-spark text-4xl md:text-6xl lg:text-7xl font-black uppercase tracking-widest leading-tight text-glow">
+            Celebrate the Joyful<br>International Holiday<br>With Us!
+        </h1>
+    </div>
+
+    <div class="glass-card px-12 py-6 mb-12 text-center">
+        <p class="text-xs tracking-[0.3em] uppercase text-slate-400 mb-2">Event Timeline</p>
+        <p class="font-spark text-xl md:text-2xl tracking-widest font-bold">
+            18 DEC 2025 – 1 JAN 2026
+        </p>
+    </div>
+
+    <div class="w-full max-w-4xl mb-16 relative flex flex-col items-center text-center">
+        <div class="mb-6">
+            <h2 class="font-spark text-3xl font-bold text-sky-400 tracking-wider">THE MYSTERY PODIUM</h2>
+            <p class="text-slate-300 text-sm">Uncover your holiday rewards</p>
+        </div>
+        
+        <div class="glass-card p-10 w-full max-w-lg flex flex-col items-center justify-center border-2 border-sky-500/30">
+            <img src="https://i.ibb.co/gZrPNHtw/prizes-2.png" alt="Prizes" class="w-48 h-auto mb-6">
+            <p class="font-spark text-2xl font-bold tracking-tighter">SURPRISE REWARD</p>
+            <p class="text-slate-400 text-xs mt-2 uppercase">Revealing Soon</p>
+        </div>
+    </div>
+
+    <div class="glass-card p-8 max-w-sm w-full text-center mb-12">
+        <p class="text-sky-400 text-xs font-bold uppercase mb-4">Step 1</p>
+        <h3 class="text-lg font-bold mb-2 uppercase">How to Claim?</h3>
+        <p class="text-slate-400 text-sm leading-relaxed">
+            Register an account on our official portal. <br>
+            Log in & claim your mysterious entry ticket.
+        </p>
+        <p class="font-serif italic text-red-400 mt-4 text-lg">That simple!</p>
+    </div>
+
+    <div class="mt-4 pb-12">
+        <a href="https://www.palacehub8.com/1NQ9tPWE" class="bg-red-600 hover:bg-red-700 text-white font-black text-2xl px-16 py-5 rounded-full shadow-[0_0_40px_rgba(220,38,38,0.6)] transition-all transform hover:scale-105 uppercase tracking-widest block text-center">
+            Join Now
+        </a>
+    </div>
+
+    </body>
+</html>
