--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand Mystery Prizes - i88</title>
+    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1546295406702882');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1546295406702882&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -73,9 +90,18 @@
     </div>
 
     <div class="mt-4 pb-12">
-        <a href="https://www.palacehub8.com/yUnSjv2C" class="bg-red-600 hover:bg-red-700 text-white font-black text-2xl px-16 py-5 rounded-full shadow-[0_0_40px_rgba(220,38,38,0.6)] transition-all transform hover:scale-105 uppercase tracking-widest block text-center">
-            Join Now
-        </a>
+      <a href="palacehub8.com/yUnSjv2C"
+   onclick="
+     fbq('track','Lead');
+     setTimeout(function(){
+       window.location.href='palacehub8.com/yUnSjv2C';
+     }, 300);
+     return false;
+   "
+   class="bg-red-600 hover:bg-red-700 text-white font-black text-2xl px-16 py-5 rounded-full shadow-[0_0_40px_rgba(220,38,38,0.6)] transition-all transform hover:scale-105 uppercase tracking-widest block text-center">
+  Join Now
+</a>
+
     </div>
 
     </body>
