--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ src="https://www.facebook.com/tr?id=1546295406702882&ev=PageView&noscript=1"
     </div>
 
     <div class="mt-4 pb-12">
-      <a href="palacehub8.com/yUnSjv2C"
+      <a href="https://palacehub8.com/yUnSjv2C"
    onclick="
      fbq('track','Lead');
      setTimeout(function(){
-       window.location.href='palacehub8.com/yUnSjv2C';
+       window.location.href='https://palacehub8.com/yUnSjv2C';
      }, 300);
      return false;
    "
